VPC-deployment.yaml
---
AWSTemplateFormatVersion: 2010-09-09

Description: Reference Architecture to host a 2 or 3 tier Architecture on AWS - Creates New VPC

Metadata:

  AWS::CloudFormation::Interface:

    ParameterGroups:
    - Label:
        default: Provide the Environment Name and Project Name for the tags.
      Parameters:
      - ProjectName
      - Environment
      
    - Label:
        default: Amazon VPC Parameters
      Parameters:
      - NumberOfAZs
      - AvailabilityZones
      - VpcCidr
      - VpcTenancy
      - WantVpcFlowLogs 
      - VpcFlowLogStorageType
      - PublicSubnet0Cidr
      - PublicSubnet1Cidr
      - PublicSubnet2Cidr
      - PublicSubnet3Cidr
      - PublicSubnet4Cidr
      - PublicSubnet5Cidr
      - PrivateSubnet0Cidr
      - PrivateSubnet1Cidr
      - PrivateSubnet2Cidr
      - PrivateSubnet3Cidr
      - PrivateSubnet4Cidr
      - PrivateSubnet5Cidr
      - DataSubnet0Cidr
      - DataSubnet1Cidr
      - DataSubnet2Cidr
      - DataSubnet3Cidr
      - DataSubnet4Cidr
      - DataSubnet5Cidr
      - WantDataBaseTier

    - Label:
        default: NAT Gateway Confirmation
      Parameters:
      - WantNatGatewayForPrivateSubnets
      - WantNatGatewayForDataBaseSubnets
      
    - Label:
        default: S3 Log Storage
      Parameters:
      - S3BucketForLogs
      
    ParameterLabels:
      ProjectName:
        default: Project Name
      Environment:
        default: Environment Name
      AvailabilityZones:
        default: Availability Zones
      NumberOfAZs:
        default: Number of Availability Zones
      VpcCidr:
        default: VpcCidr
      VpcTenancy:
        default: VpcTenancy
      WantVpcFlowLogs:
        default: WantVpcFlowLogs
      VpcFlowLogStorageType:
        default: VpcFlowLogStorageType
      PublicSubnet0Cidr:
        default: Public Subnet 0
      PublicSubnet1Cidr:
        default: Public Subnet 1
      PublicSubnet2Cidr:
        default: Public Subnet 2
      PublicSubnet3Cidr:
        default: Public Subnet 3
      PublicSubnet4Cidr:
        default: Public Subnet 4
      PublicSubnet5Cidr:
        default: Public Subnet 5
      PrivateSubnet0Cidr:
        default: Private Subnet 0
      PrivateSubnet1Cidr:
        default: Private Subnet 1
      PrivateSubnet2Cidr:
        default: Private Subnet 2
      PrivateSubnet3Cidr:
        default: Private Subnet 3
      PrivateSubnet4Cidr:
        default: Private Subnet 4
      PrivateSubnet5Cidr:
        default: Private Subnet 5
      DataSubnet0Cidr:
        default: Data Subnet 0
      DataSubnet1Cidr:
        default: Data Subnet 1
      DataSubnet2Cidr:
        default: Data Subnet 2
      DataSubnet3Cidr:
        default: Data Subnet 3
      DataSubnet4Cidr:
        default: Data Subnet 4
      DataSubnet5Cidr:
        default: Data Subnet 5
      WantDataBaseTier:
        default: Want Database Subnet? Select from Yes or No
      WantNatGatewayForPrivateSubnets:
        default: Want NatGateway for Private Subnet? Select from Yes or No
      WantNatGatewayForDataBaseSubnets:
        default: Want NatGateway for Database Subnet? Select from Yes or No
      S3BucketForLogs:
        default: S3 Bucket For Logs
Parameters:
  ProjectName:
    Description: Enter the Project name
    Type: String

  Environment:
    Description: Enter the Environment name
    Type: String
    Default: dev
    
  WantDataBaseTier:
    AllowedValues:
    - 'no'
    - 'yes'
    Default: 'yes'
    Description: "Want Database or Not? If Yes, Select Yes"
    Type: String
  AvailabilityZones:
    Description: 'List of Availability Zones to use for the subnets in the VPC. Note:
      The logical order is preserved.'
    Type: List<AWS::EC2::AvailabilityZone::Name>
  NumberOfAZs:
    AllowedValues:
    - 2
    - 3
    - 4
    - 5
    - 6
    Default: 3
    Description: Number of Availability Zones to use in the VPC. This must match your
      selections in the list of Availability Zones parameter.
    Type: Number
  VpcCidr:
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.0.0/16
    Description: CIDR block for the VPC
    Type: String
  VpcTenancy:
    AllowedValues:
    - default
    - dedicated
    Default: default
    Description: The allowed tenancy of instances launched into the VPC
    Type: String
  DataSubnet0Cidr:
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.100.0/24
    Description: CIDR block for data subnet 0 located in Availability Zone 0
    Type: String
  DataSubnet1Cidr:
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.101.0/24
    Description: CIDR block for data subnet 1 located in Availability Zone 1
    Type: String
  DataSubnet2Cidr:
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.102.0/24
    Description: CIDR block for data subnet 2 located in Availability Zone 2
    Type: String
  DataSubnet3Cidr:
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.103.0/24
    Description: CIDR block for data subnet 3 located in Availability Zone 3
    Type: String
  DataSubnet4Cidr:
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.104.0/24
    Description: CIDR block for data subnet 4 located in Availability Zone 4
    Type: String
  DataSubnet5Cidr:
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.105.0/24
    Description: CIDR block for data subnet 5 located in Availability Zone 5
    Type: String
  PublicSubnet0Cidr:
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.200.0/24
    Description: CIDR block for Public subnet 0 located in Availability Zone 0
    Type: String
  PublicSubnet1Cidr:
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.201.0/24
    Description: CIDR block for Public subnet 1 located in Availability Zone 1
    Type: String
  PublicSubnet2Cidr:
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.202.0/24
    Description: CIDR block for Public subnet 2 located in Availability Zone 2
    Type: String
  PublicSubnet3Cidr:
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.203.0/24
    Description: CIDR block for Public subnet 3 located in Availability Zone 3
    Type: String
  PublicSubnet4Cidr:
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.204.0/24
    Description: CIDR block for Public subnet 4 located in Availability Zone 4
    Type: String
  PublicSubnet5Cidr:
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.205.0/24
    Description: CIDR block for Public subnet 5 located in Availability Zone 5
    Type: String
  PrivateSubnet0Cidr:
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.0.0/22
    Description: CIDR block for Private subnet 0 located in Availability Zone 0
    Type: String
  PrivateSubnet1Cidr:
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.4.0/22
    Description: CIDR block for Private subnet 1 located in Availability Zone 1
    Type: String
  PrivateSubnet2Cidr:
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.8.0/22
    Description: CIDR block for Private subnet 2 located in Availability Zone 2
    Type: String
  PrivateSubnet3Cidr:
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.12.0/22
    Description: CIDR block for Private subnet 3 located in Availability Zone 3
    Type: String
  PrivateSubnet4Cidr:
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.16.0/22
    Description: CIDR block for Private subnet 4 located in Availability Zone 4
    Type: String
  PrivateSubnet5Cidr:
    AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
    Default: 10.0.20.0/22
    Description: CIDR block for Private subnet 5 located in Availability Zone 5
    Type: String

  WantNatGatewayForPrivateSubnets:
    AllowedValues:
    - 'no'
    - 'yes'
    Default: 'yes'
    Description: "Want NatGateway for Private Subnet or Not? If Yes, Select Yes"
    Type: String

  WantNatGatewayForDataBaseSubnets:
    AllowedValues:
    - 'no'
    - 'yes'
    Default: 'yes'
    Description: "Want NatGateway for Database Subnet or Not? If Yes, Select Yes"
    Type: String

  WantVpcFlowLogs:
   AllowedValues:
   - 'enable'
   - 'disable'
   Default: 'enable'
   Description: "Want VpcFlowlogs or Not? If Yes, Select enable"
   Type: String
   
  VpcFlowLogStorageType:
    Type: String
    Default: "CloudWatchLogs" 
    AllowedValues:
      - "CloudWatchLogs"
      - "S3"
    Description: "Choose where you want to store VPC Flow Logs: CloudWatch Logs or S3"
    
Conditions:
  NumberOfAZs1:
      !Equals [ '1', !Ref NumberOfAZs ]
  NumberOfAZs2:
      !Equals [ '2', !Ref NumberOfAZs ]
  NumberOfAZs3:
      !Equals [ '3', !Ref NumberOfAZs ]
  NumberOfAZs4:
      !Equals [ '4', !Ref NumberOfAZs ]
  NumberOfAZs5:
      !Equals [ '5', !Ref NumberOfAZs ]
  NumberOfAZs6:
      !Equals [ '6', !Ref NumberOfAZs ]
  AppTier:
    !Equals [ !Ref WantDataBaseTier, 'yes' ]

  WantNatGatewayForPrivateSubnet:  !Equals [!Ref WantNatGatewayForPrivateSubnets, 'yes']

  WantNatGatewayForDataBaseSubnet:  !Equals [!Ref WantNatGatewayForDataBaseSubnets, 'yes']

  WantVpcFlowLogs: !Equals [!Ref WantVpcFlowLogs, 'enable']
  
  WantVpcFlowLogsInCloudWatch: !And
    - !Condition WantVpcFlowLogs
    - !Equals [ !Ref VpcFlowLogStorageType, "CloudWatchLogs" ]
  
  WantVpcFlowLogsInS3: !And
    - !Condition WantVpcFlowLogs
    - !Equals [ !Ref VpcFlowLogStorageType, "S3" ]

  AZ0: !Or
    - !Condition NumberOfAZs1
    - !Condition NumberOfAZs2
    - !Condition NumberOfAZs3
    - !Condition NumberOfAZs4
    - !Condition NumberOfAZs5
    - !Condition NumberOfAZs6
  AZ1: !Or
    - !Condition NumberOfAZs2
    - !Condition NumberOfAZs3
    - !Condition NumberOfAZs4
    - !Condition NumberOfAZs5
    - !Condition NumberOfAZs6
  AZ2: !Or
    - !Condition NumberOfAZs3
    - !Condition NumberOfAZs4
    - !Condition NumberOfAZs5
    - !Condition NumberOfAZs6
  AZ3: !Or
    - !Condition NumberOfAZs4
    - !Condition NumberOfAZs5
    - !Condition NumberOfAZs6
  AZ4: !Or
    - !Condition NumberOfAZs5
    - !Condition NumberOfAZs6

  AZ5: !Condition NumberOfAZs6

  DBTier00: !And
   - !Condition AZ0
   - !Condition AppTier
  DBTier01: !And
   - !Condition AZ1
   - !Condition AppTier

  DBTier02: !And
   - !Condition AZ2
   - !Condition AppTier
  DBTier03: !And
   - !Condition AZ3
   - !Condition AppTier
  DBTier04: !And
   - !Condition AZ4
   - !Condition AppTier
  DBTier05: !And
   - !Condition AZ5
   - !Condition AppTier

  NatGatewayConfirmation: !Or
   - !Condition WantNatGatewayForPrivateSubnet
   - !Condition WantNatGatewayForDataBaseSubnet

  NatGateway: !And
   - !Condition NatGatewayConfirmation
   - !Or
    - !Condition AZ0 
    - !Condition AZ1
    - !Condition AZ2
    - !Condition AZ3
    - !Condition AZ4
    - !Condition AZ5


Resources:
  PrivateSubnet0:
    Condition: AZ0
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 0, !Ref AvailabilityZones ]
      CidrBlock: !Ref PrivateSubnet0Cidr
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Join [ '-', [ !Ref 'ProjectName', !Ref 'Environment', 'PrivateSubnet0' ] ]
        - Key: SubnetType
          Value: Private
      VpcId: !Ref Vpc

  PrivateSubnet1:
    Condition: AZ1
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 1, !Ref AvailabilityZones ]
      CidrBlock: !Ref PrivateSubnet1Cidr
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Join [ '-', [ !Ref 'ProjectName', !Ref 'Environment', 'PrivateSubnet1' ] ]
        - Key: SubnetType
          Value: Private
      VpcId: !Ref Vpc

  PrivateSubnet2:
    Condition: AZ2
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 2, !Ref AvailabilityZones ]
      CidrBlock: !Ref PrivateSubnet2Cidr
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Join [ '-', [ !Ref 'ProjectName', !Ref 'Environment', 'PrivateSubnet2' ] ]
        - Key: SubnetType
          Value: Private
      VpcId: !Ref Vpc

  PrivateSubnet3:
    Condition: AZ3
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 3, !Ref AvailabilityZones ]
      CidrBlock: !Ref PrivateSubnet3Cidr
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Join [ '-', [ !Ref 'ProjectName', !Ref 'Environment', 'PrivateSubnet3' ] ]
        - Key: SubnetType
          Value: Private
      VpcId: !Ref Vpc

  PrivateSubnet4:
    Condition: AZ4
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 4, !Ref AvailabilityZones ]
      CidrBlock: !Ref PrivateSubnet4Cidr
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Join [ '-', [  !Ref 'ProjectName', !Ref 'Environment', 'PrivateSubnet4' ] ]
        - Key: SubnetType
          Value: Private
      VpcId: !Ref Vpc

  PrivateSubnet5:
    Condition: AZ5
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 5, !Ref AvailabilityZones ]
      CidrBlock: !Ref PrivateSubnet3Cidr
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Join [ '-', [ !Ref 'ProjectName', !Ref 'Environment',  'PrivateSubnet5' ] ]
        - Key: SubnetType
          Value: Private
      VpcId: !Ref Vpc

  PrivateSubnetRouteTableAssociation0:
    Condition: AZ0 
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        !If [WantNatGatewayForPrivateSubnet, !Ref NatRouteTable, !Ref PrivateRouteTable]
      SubnetId: !Ref PrivateSubnet0
  PrivateSubnetRouteTableAssociation1:
    Condition: AZ1
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        !If [WantNatGatewayForPrivateSubnet, !Ref NatRouteTable, !Ref PrivateRouteTable]
      SubnetId: !Ref PrivateSubnet1
  PrivateSubnetRouteTableAssociation2:
    Condition: AZ2
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        !If [WantNatGatewayForPrivateSubnet, !Ref NatRouteTable, !Ref PrivateRouteTable]
      SubnetId: !Ref PrivateSubnet2
  PrivateSubnetRouteTableAssociation3:
    Condition: AZ3
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        !If [WantNatGatewayForPrivateSubnet, !Ref NatRouteTable, !Ref PrivateRouteTable]
      SubnetId: !Ref PrivateSubnet3
  PrivateSubnetRouteTableAssociation4:
    Condition: AZ4
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        !If [WantNatGatewayForPrivateSubnet, !Ref NatRouteTable, !Ref PrivateRouteTable]
      SubnetId: !Ref PrivateSubnet4
  PrivateSubnetRouteTableAssociation5:
    Condition: AZ5
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        !If [WantNatGatewayForPrivateSubnet, !Ref NatRouteTable, !Ref PrivateRouteTable]
      SubnetId: !Ref PrivateSubnet5

  DataSubnet0:
    Condition: DBTier00
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 0, !Ref AvailabilityZones ]
      CidrBlock: !Ref DataSubnet0Cidr
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Join [ '-', [ !Ref 'ProjectName', !Ref 'Environment', 'DataSubnet0' ] ]
        - Key: SubnetType
          Value: Private
      VpcId: !Ref Vpc

  DataSubnet1:
    Condition: DBTier01
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 1, !Ref AvailabilityZones ]
      CidrBlock: !Ref DataSubnet1Cidr
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Join [ '-', [ !Ref 'ProjectName', !Ref 'Environment',  'DataSubnet1' ] ]
        - Key: SubnetType
          Value: Private
      VpcId: !Ref Vpc

  DataSubnet2:
    Condition: DBTier02
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 2, !Ref AvailabilityZones ]
      CidrBlock: !Ref DataSubnet2Cidr
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Join [ '-', [ !Ref 'ProjectName', !Ref 'Environment', 'DataSubnet2' ] ]
        - Key: SubnetType
          Value: Private
      VpcId: !Ref Vpc

  DataSubnet3:
    Condition: DBTier03
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 3, !Ref AvailabilityZones ]
      CidrBlock: !Ref DataSubnet3Cidr
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Join [ '-', [ !Ref 'ProjectName', !Ref 'Environment', 'DataSubnet3' ] ]
        - Key: SubnetType
          Value: Private
      VpcId: !Ref Vpc

  DataSubnet4:
    Condition: DBTier04
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 4, !Ref AvailabilityZones ]
      CidrBlock: !Ref DataSubnet4Cidr
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Join [ '-', [ !Ref 'ProjectName', !Ref 'Environment', 'DataSubnet4' ] ]
        - Key: SubnetType
          Value: Private
      VpcId: !Ref Vpc

  DataSubnet5:
    Condition: DBTier05
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 5, !Ref AvailabilityZones ]
      CidrBlock: !Ref DataSubnet5Cidr
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Join [ '-', [ !Ref 'ProjectName', !Ref 'Environment', 'DataSubnet5' ] ]
        - Key: SubnetType
          Value: Private
      VpcId: !Ref Vpc

  DataSubnetRouteTableAssociation0:
    Condition: DBTier00
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        !If [WantNatGatewayForDataBaseSubnet, !Ref NatRouteTable, !Ref PrivateRouteTable]
      SubnetId: !Ref DataSubnet0
  DataSubnetRouteTableAssociation1:
    Condition: DBTier01
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        !If [WantNatGatewayForDataBaseSubnet, !Ref NatRouteTable, !Ref PrivateRouteTable]
      SubnetId: !Ref DataSubnet1
  DataSubnetRouteTableAssociation2:
    Condition: DBTier02
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        !If [WantNatGatewayForDataBaseSubnet, !Ref NatRouteTable, !Ref PrivateRouteTable]
      SubnetId: !Ref DataSubnet2
  DataSubnetRouteTableAssociation3:
    Condition: DBTier03
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        !If [WantNatGatewayForDataBaseSubnet, !Ref NatRouteTable, !Ref PrivateRouteTable]
      SubnetId: !Ref DataSubnet3
  DataSubnetRouteTableAssociation4:
    Condition: DBTier04
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        !If [WantNatGatewayForDataBaseSubnet, !Ref NatRouteTable, !Ref PrivateRouteTable]
      SubnetId: !Ref DataSubnet4
  DataSubnetRouteTableAssociation5:
    Condition: DBTier05
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        !If [WantNatGatewayForDataBaseSubnet, !Ref NatRouteTable, !Ref PrivateRouteTable]
      SubnetId: !Ref DataSubnet5

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Join [ '-', [ !Ref 'ProjectName', !Ref 'Environment',  'InternetGateway' ] ]

  AttachInternetGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref Vpc

  NatEIP:
    Condition: NatGateway
    Type: AWS::EC2::EIP
    Properties:
      Tags:
        - Key: Name
          Value: !Join [ '-', [ !Ref 'ProjectName', !Ref 'Environment',  'NatEIP' ] ]
      Domain: vpc

  NatGateway:
    Condition: NatGateway
    Type: AWS::EC2::NatGateway
    DependsOn: AttachInternetGateway
    Properties:
      Tags:
       - Key: Name
         Value: !Join [ '-', [ !Ref 'ProjectName', !Ref 'Environment',  'NatGateway' ] ]
      AllocationId: !GetAtt NatEIP.AllocationId
      SubnetId: !Ref PublicSubnet0

  NatRoute:
    Condition: NatGateway
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref NatRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  NatRouteTable:
    Condition: NatGateway
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: !Join [ '-', [  !Ref 'ProjectName', !Ref 'Environment', 'NatRouteTable0' ] ]
        - Key: Network
          Value: Public
      VpcId: !Ref Vpc
  
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachInternetGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: !Join [ '-', [ !Ref 'ProjectName', !Ref 'Environment', 'PublicRouteTable' ] ]
        - Key: Network
          Value: Public
      VpcId: !Ref Vpc

  PublicRouteTableAssociation0:
    Condition: AZ0
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet0
      RouteTableId: !Ref PublicRouteTable
  PublicRouteTableAssociation1:
    Condition: AZ1
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable
  PublicRouteTableAssociation2:
    Condition: AZ2
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable
  PublicRouteTableAssociation3:
    Condition: AZ3
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet3
      RouteTableId: !Ref PublicRouteTable
  PublicRouteTableAssociation4:
    Condition: AZ4
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet4
      RouteTableId: !Ref PublicRouteTable
  PublicRouteTableAssociation5:
    Condition: AZ5
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet5
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet0:
    Condition: AZ0
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 0, !Ref AvailabilityZones ]
      CidrBlock: !Ref PublicSubnet0Cidr
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Join [ '-', [ !Ref 'ProjectName', !Ref 'Environment',  'PublicSubnet0' ] ]
        - Key: SubnetType
          Value: Public
      VpcId: !Ref Vpc

  PublicSubnet1:
    Condition: AZ1
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 1, !Ref AvailabilityZones ]
      CidrBlock: !Ref PublicSubnet1Cidr
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Join [ '-', [ !Ref 'ProjectName', !Ref 'Environment', 'PublicSubnet1' ] ]
        - Key: SubnetType
          Value: Public
      VpcId: !Ref Vpc

  PublicSubnet2:
    Condition: AZ2
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 2, !Ref AvailabilityZones ]
      CidrBlock: !Ref PublicSubnet2Cidr
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Join [ '-', [  !Ref 'ProjectName', !Ref 'Environment', 'PublicSubnet2' ] ]
        - Key: SubnetType
          Value: Public
      VpcId: !Ref Vpc

  PublicSubnet3:
    Condition: AZ3
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 3, !Ref AvailabilityZones ]
      CidrBlock: !Ref PublicSubnet3Cidr
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Join [ '-', [ !Ref 'ProjectName', !Ref 'Environment', 'PublicSubnet3' ] ]
        - Key: SubnetType
          Value: Public
      VpcId: !Ref Vpc

  PublicSubnet4:
    Condition: AZ4
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 4, !Ref AvailabilityZones ]
      CidrBlock: !Ref PublicSubnet4Cidr
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Join [ '-', [ !Ref 'ProjectName', !Ref 'Environment',  'PublicSubnet4' ] ]
        - Key: SubnetType
          Value: Public
      VpcId: !Ref Vpc

  PublicSubnet5:
    Condition: AZ5
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 5, !Ref AvailabilityZones ]
      CidrBlock: !Ref PublicSubnet5Cidr
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Join [ '-', [ !Ref 'ProjectName', !Ref 'Environment',  'PublicSubnet5' ] ]
        - Key: SubnetType
          Value: Public
      VpcId: !Ref Vpc

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: Vpc
      Tags:
        - Key: Name
          Value: !Join [ '-', [ !Ref 'ProjectName', !Ref 'Environment', 'PrivateRouteTable' ] ]
        - Key: Network
          Value: Private
          
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidr
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: !Join [ '-', [ !Ref 'ProjectName', !Ref 'Environment', 'Vpc' ] ]

  VpcFlowLogBucket:
    Type: AWS::S3::Bucket
    Condition: WantVpcFlowLogsInS3
    Properties:
      BucketName: !Sub '${ProjectName}-${Environment}-vpc-flowlog-bucket'
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true

  VpcFlowLogBucketPolicy:
    Type: AWS::S3::BucketPolicy
    DependsOn: VpcFlowLogBucket
    Condition: WantVpcFlowLogsInS3
    Properties:
      Bucket: !Ref VpcFlowLogBucket
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Sid: AWSLogDeliveryWrite
            Effect: Allow
            Principal:
              Service: delivery.logs.amazonaws.com
            Action: s3:PutObject
            Resource: !Sub '${VpcFlowLogBucket.Arn}/*'
            Condition:
              StringEquals:
                aws:SourceAccount: !Ref AWS::AccountId
                s3:x-amz-acl: bucket-owner-full-control
              ArnLike:
                aws:SourceArn: !Sub 'arn:aws:logs:${AWS::Region}:${AWS::AccountId}:*'
          - Sid: AWSLogDeliveryAclCheck
            Effect: Allow
            Principal:
              Service: delivery.logs.amazonaws.com
            Action: s3:GetBucketAcl
            Resource: !GetAtt VpcFlowLogBucket.Arn
            Condition:
              StringEquals:
                aws:SourceAccount: !Ref AWS::AccountId
              ArnLike:
                aws:SourceArn: !Sub 'arn:aws:logs:${AWS::Region}:${AWS::AccountId}:*'

  VpcFlowLogGroup:
    Type: AWS::Logs::LogGroup
    Condition: WantVpcFlowLogsInCloudWatch
    Properties:
      LogGroupName: !Join [ '-', [ !Ref 'ProjectName', !Ref 'Environment', 'VPC-FlowLog' ] ]
      RetentionInDays: 30

  VpcFlowLogS3:
    DependsOn: VpcFlowLogBucketPolicy
    Type: AWS::EC2::FlowLog
    Condition: WantVpcFlowLogsInS3
    Properties:
      ResourceId: !Ref Vpc
      ResourceType: VPC
      TrafficType: ALL
      LogDestinationType: s3
      LogDestination: !Sub 'arn:aws:s3:::${VpcFlowLogBucket}/${ProjectName}-${Environment}-vpc-flowlog/'

  VpcFlowLogCloudWatch:
    Type: AWS::EC2::FlowLog
    Condition: WantVpcFlowLogsInCloudWatch
    DependsOn: VpcFlowLogGroup
    Properties:
      DeliverLogsPermissionArn: !GetAtt VpcFlowLogsRole.Arn
      LogGroupName: !Ref VpcFlowLogGroup
      ResourceId: !Ref Vpc
      ResourceType: VPC
      TrafficType: ALL

  VpcFlowLogsRole:
    Type: AWS::IAM::Role
    Condition: WantVpcFlowLogsInCloudWatch
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Action:
              - sts:AssumeRole
            Effect: Allow
            Principal:
              Service:
                - vpc-flow-logs.amazonaws.com
      Path: '/'
      RoleName: !Join [ '-', [ !Ref 'ProjectName', !Ref 'Environment', 'VPC-FlowLog-Role' ] ]
      Policies:
        - PolicyName: !Join [ '-', [ !Ref 'ProjectName', !Ref 'Environment', 'Policy' ] ]
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Action:
                  - logs:CreateLogGroup
                  - logs:CreateLogStream
                  - logs:DescribeLogGroups
                  - logs:DescribeLogStreams
                  - logs:PutLogEvents
                Effect: Allow
                Resource: '*'

Outputs:
  Vpc:
    Value: !Ref Vpc
  VpcCidr:
    Value: !Ref VpcCidr
  PublicSubnet0:
    Condition: AZ0
    Value: !Ref PublicSubnet0
  PublicSubnet1:
    Condition: AZ1
    Value: !Ref PublicSubnet1
  PublicSubnet2:
    Condition: AZ2
    Value: !Ref PublicSubnet2
  PublicSubnet3:
    Condition: AZ3
    Value: !Ref PublicSubnet3
  PublicSubnet4:
    Condition: AZ4
    Value: !Ref PublicSubnet4
  PublicSubnet5:
    Condition: AZ5
    Value: !Ref PublicSubnet5
  PrivateSubnet0:
    Condition: AZ0
    Value: !Ref PrivateSubnet0
  PrivateSubnet1:
    Condition: AZ1
    Value: !Ref PrivateSubnet1
  PrivateSubnet2:
    Condition: AZ2
    Value: !Ref PrivateSubnet2
  PrivateSubnet3:
    Condition: AZ3
    Value: !Ref PrivateSubnet3
  PrivateSubnet4:
    Condition: AZ4
    Value: !Ref PrivateSubnet4
  PrivateSubnet5:
    Condition: AZ5
    Value: !Ref PrivateSubnet5
  DataSubnet0:
    Condition: DBTier00
    Value: !Ref DataSubnet0
  DataSubnet1:
    Condition: DBTier01
    Value: !Ref DataSubnet1
  DataSubnet2:
    Condition: DBTier02
    Value: !Ref DataSubnet2
  DataSubnet3:
    Condition: DBTier03
    Value: !Ref DataSubnet3
  DataSubnet4:
    Condition: DBTier04
    Value: !Ref DataSubnet4
  DataSubnet5:
    Condition: DBTier05
    Value: !Ref DataSubnet5
